@startuml CompleteClassDiagram
title CompleteClassDiagram
class List #GhostWhite {
- Node? _head
---
+ int getCount()
---
+ void Clear()
+ void Add(double value)
+ void RemoveAt(int index)
+ void Insert(int index, double value)
}
class Node #GhostWhite {
- double _value
- Node? _prev
- Node? _next
---
+ double getValue()
+ Void setValue(double value)
+ Node? getPrev()
+ Void setPrev(Node? value)
+ Node? getNext()
+ Void setNext(Node? value)
---
}
class ObjectDiagram << static >>  #GhostWhite {
+ {static} string DiagramPath = Environment.GetFolderPath(Environment.SpecialFolder.UserProfile)
+ {static} string FilePath = Path.Combine(DiagramPath, "od_LinkedList.puml")
---
---
+ {static} void Generate(object[] items)
}
class Program #GhostWhite {
---
---
- {static} void Main(string[] args)
- {static} void Parse(string input)
}
List "0..1" *-- "1" Node : _head
Node "0..1" *-- "1" Node : _prev
Node "0..1" *-- "1" Node : _next
@enduml
